Added app property of minimal products in store. Edited styles of side menu in hover theme.

--- a/modules/core/src/com/company/myerp/app.properties
+++ b/modules/core/src/com/company/myerp/app.properties
@@ -32,3 +32,9 @@ cuba.dataSource.username = postgres
 cuba.dataSource.password = pass
 cuba.dataSource.dbName = myerp-179345
 cuba.dataSource.host = localhost
+
+###############################################################################
+#                                  Applications                               #
+###############################################################################
+
+myerp.minimalNumberProductStoreItems = 50
