--- a/build.gradle
+++ b/build.gradle
@@ -35,6 +35,7 @@ cuba {
 
 dependencies {
     appComponent("com.haulmont.cuba:cuba-global:$cubaVersion")
+    appComponent('com.haulmont.charts:charts-global:7.2.10')
 }
 
 def postgres = 'org.postgresql:postgresql:42.2.9'
