--- a/modules/core/src/com/company/myerp/app.properties
+++ b/modules/core/src/com/company/myerp/app.properties
@@ -22,7 +22,7 @@ cuba.anonymousSessionId = a19239bc-aed3-8559-2c96-356d2e23b04b
 #                                  Other                                      #
 ###############################################################################
 
-cuba.webContextName = app-core
+cuba.webContextName = erp-core
 cuba.availableLocales = English|en
 cuba.localeSelectVisible = false
 
@@ -38,3 +38,5 @@ cuba.dataSource.host = localhost
 ###############################################################################
 
 myerp.minimalNumberProductStoreItems = 50
+cuba.restApiUrl=http://localhost:8080/erp-portal/api
+cuba.webAppUrl=http://localhost:8080/erp
